--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
   background-color: #000; /* 黒背景 */
   color: #fff;            /* 白文字 */
-  font-family: 'Baumans', sans-serif;
+  font-family: 'Baumans','IBM Plex Sans JP' sans-serif;
 }
