--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,19 @@ body {
   color: #fff;            /* 白文字 */
   font-family: 'Baumans', sans-serif;
 }
-.flex {
+.item {
   display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 30px 0;
 }
-.flex .image {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  position: relative;
+
+.item img {
+  width: 250px;
+  height: auto;
 }
-.flex .text {
-  padding: 0;
+
+.item p {
+  flex: 1;
+  line-height: 1.8;
 }
