--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ body {
 }
 
 .banner {
-  background-image: url();
+  background-image: url("mokume34.png");
   background-position: left top;
   background-repeat: no-repeat;
 }
