--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,3 +35,8 @@ body {
   background-position: left top;
   background-repeat: no-repeat;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
