--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,13 @@ body {
   border: 1px solid rgba(255,255,255,0.3);
 }
 
+.work video {
+  width: 650px;
+  padding:8px;
+  background: #111;
+  border: 1px solid rgba(255,255,255,0.3);
+}
+
 .item.reverse {
   flex-direction: row-reverse;
 }
