--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,13 @@ body {
   border: 1px solid rgba(255,255,255,0.3);
 }
 
+.work {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  font-size: 2rem;
+}
+
 .item.reverse {
   flex-direction: row-reverse;
 }
