--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,9 @@ body {
   align-items: center;
   gap: 40px;
   font-size: 2rem;
+}
+
+.item p {
   padding: .5em;
   margin-bottom: 1em;
   border-left: 5px solid #d4af37;
