--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,12 @@ body {
   gap: 40px;
 }
 
+.work h1 {
+  border-bottom: 1px solid rgba(255,255,255,0.3);
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+}
+
 .item.reverse {
   flex-direction: row-reverse;
 }
