--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,10 +45,24 @@ body {
   gap: 40px;
 }
 
-.work h1 {
+.work title {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-size: 18px;
   border-bottom: 1px solid rgba(255,255,255,0.3);
   padding-bottom: 10px;
   margin-bottom: 30px;
+}
+
+.work right {
+  margin: 0 0 0 20px;
+  padding: 0;
+}
+
+.work text {
+  margin: 10px 0 0;
+  padding: 0;
 }
 
 .item.reverse {
