--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #000; /* 黒背景 */
-  color: #fff;            /* 白文字 */
+  background-color: #000; 
+  color: #fff;
   font-family: 'Baumans', sans-serif;
 }
 .item {
