--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,8 +17,8 @@ body {
 }
 
 .item img {
-  width: 512px;
-  height: 512px;
+  width: 50%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   padding: 8px;
   background: #111;
